# wxtla

./: AGENTS.md  Cargo.toml  LICENSE.mit  README.md
.github/workflows/: ci.yml  github_release.yml  quality_check.yml
docs/: README.md  apfs-phase-5a-plan.md  architecture.md  development-plan.md  feature-completion-plan.md  format-inventory.md  implementation-workflow.md  unified-source-model.md
formats/7z/: sample.7z  secret.7z
formats/apfs/: apfs.meta.txt
formats/bitlocker/: bitlocker.E01.txt  bitlocker.meta.txt  flag.txt  sector_data.1
formats/cramfs/: cramfs.raw
formats/hfs/: hfsplus.raw
formats/ntfs/libfsntfs/: reparse_point_values.1
formats/splitraw/: ext2.raw.000  ext2.raw.001  ext2.raw.002  ext2.raw.003
formats/squashfs/: squashfs.raw
formats/tar/: sample.tar
formats/vmdk/: ext2-cowd-descriptor.vmdk  ext2-descriptor.vmdk  ext2-flat-descriptor.vmdk  ext2.cowd  ext2.vmdk
src/: lib.rs  test_utils.rs
src/archives/: cache.rs  driver.rs  entry.rs  mod.rs  tool.rs
src/archives/adf/: archive.rs  driver.rs  mod.rs
src/archives/rar/: archive.rs  driver.rs  mod.rs
src/archives/sevenz/: archive.rs  driver.rs  mod.rs
src/archives/tar/: archive.rs  driver.rs  mod.rs
src/archives/zip/: archive.rs  driver.rs  mod.rs
src/core/: cache.rs  data_source.rs  driver_macro.rs  endian.rs  error.rs  local.rs  mod.rs  namespace.rs  opened.rs  probe.rs  resolver.rs
src/filesystems/: driver.rs  mod.rs  node.rs
src/filesystems/apfs/: btree.rs  container.rs  crypto.rs  datasource.rs  driver.rs  filesystem.rs  group.rs  helpers.rs  keybag.rs  mod.rs  ondisk.rs  ondisk_tests.rs  records.rs
src/filesystems/clfs/: driver.rs  filesystem.rs  mod.rs
src/filesystems/cramfs/: driver.rs  filesystem.rs  mod.rs
src/filesystems/ext/: driver.rs  filesystem.rs  mod.rs  superblock.rs  xattr.rs
src/filesystems/fat/: boot_sector.rs  driver.rs  filesystem.rs  mod.rs
src/filesystems/ffs/: driver.rs  filesystem.rs  mod.rs
src/filesystems/hfs/: btree.rs  driver.rs  filesystem.rs  mod.rs
src/filesystems/jffs2/: driver.rs  filesystem.rs  mod.rs
src/filesystems/ntfs/: attribute_list.rs  boot_sector.rs  driver.rs  filesystem.rs  index.rs  mod.rs  record.rs  reparse.rs  runlist.rs  stream.rs
src/filesystems/qnxfs/: driver.rs  filesystem.rs  mod.rs
src/filesystems/refs/: data_source.rs  driver.rs  filesystem.rs  mod.rs  parser.rs
src/filesystems/squashfs/: datasource.rs  directory.rs  driver.rs  filesystem.rs  inode.rs  mod.rs  superblock.rs
src/filesystems/vmfs/: driver.rs  filesystem.rs  mod.rs
src/filesystems/xfs/: constants.rs  data_source.rs  directory.rs  driver.rs  extent.rs  filesystem.rs  inode.rs  io.rs  mod.rs  superblock.rs
src/formats/: apm.rs  builtins.rs  ewf.rs  ext.rs  fat.rs  gpt.rs  hfs.rs  inventory.rs  mbr.rs  mod.rs  ntfs.rs  probe_support.rs  qcow.rs  registry.rs  sparseimage.rs  udif.rs  vhd.rs  vhdx.rs  vmdk.rs
src/images/: driver.rs  mod.rs
src/images/ewf/: cache.rs  constants.rs  driver.rs  error2.rs  file_header.rs  hash.rs  image.rs  metadata.rs  mod.rs  naming.rs  parser.rs  section.rs  table.rs  types.rs  utils.rs  volume.rs
src/images/pdi/: descriptor.rs  driver.rs  image.rs  mod.rs  sparse_extent.rs
src/images/qcow/: cache.rs  constants.rs  driver.rs  extension.rs  header.rs  image.rs  mod.rs  parser.rs  snapshot.rs  validation.rs
src/images/sparsebundle/: driver.rs  image.rs  mod.rs  parser.rs
src/volumes/: driver.rs  mod.rs  record.rs
tests/: filesystem_apfs.rs  filesystem_cramfs.rs  filesystem_ext.rs  filesystem_fat.rs  filesystem_ffs.rs  filesystem_hfs.rs  filesystem_ntfs.rs  filesystem_qnxfs.rs  filesystem_refs.rs  filesystem_squashfs.rs  filesystem_xfs.rs  probe_samples.rs
tests/support/: mod.rs
(+88 files in other folders)
