[package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
edition      = "2024"
exclude      = ["formats/**", "tests/**", "docs/**"]
name         = "wxtla"
readme       = "README.md"
rust-version = "1.93.1"
version      = "0.3.0"

description   = "Wired eXploring Target Layer Accessor"
documentation = "https://docs.rs/wxtla"
homepage      = "https://www.woooo.tech/zh-cn/regressor"
license       = "MIT or Apache-2.0"
repository    = "https://github.com/Reverier-Xu/wxtla"


[profile.release]
codegen-units = 1
lto           = "thin"
opt-level     = 3
strip         = true


[dependencies]
adc                   = "0.2"
adler2                = "2.0"
aes                   = "0.8"
bzip2                 = "0.6"
ccm                   = { version = "0.5", default-features = false, features = ["alloc"] }
crc32c                = "0.6"
crc32fast             = "1.5"
encoding_rs           = "0.8"
flate2                = "1.1"
hmac                  = "0.12"
inventory             = "0.3"
libc                  = "0.2"
lzfse                 = "0.2"
lzvn                  = "0.1"
pbkdf2                = "0.12"
plist                 = "1.8"
roxmltree             = "0.21"
serde                 = { version = "1.0", features = ["derive"] }
sha1_smol             = { version = "1.0", features = ["std"] }
sha2                  = "0.10"
thiserror             = "2.0"
unicode-casefold      = "0.2"
unicode-normalization = "0.1"
xts-mode              = "0.5"
xz2                   = "0.1"
zstd                  = "0.13"

[dev-dependencies]
md5 = "0.8"
